--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valentine's Day Surprise</title>
+    <title>Sevgimizi Beraber Kutliyalim </title>
     <style>
         body {
             font-family: 'Arial, sans-serif';
@@ -67,17 +67,17 @@
 <body>
     <div class="container">
         <div class="heart">❤️</div>
-        <h1>Valentine's Day Date Invitation</h1>
-        <p>Hi Love,</p>
-        <p>I have a special evening planned just for us! Join me for a cozy date over Zoom where we can relax, laugh, and make this day unforgettable.</p>
-        <p><strong>Date:</strong> February 14th</p>
-        <p><strong>Time:</strong> 7:00 PM EST</p>
+        <h1>Hafsa ve Selim gunune davetiye</h1>
+        <p>Hafsa,</p>
+        <p>Sadece ikimiz icin ozel bi program dusunuyorum, heyecanli bi vakit gecerlim beraber, lutfen altdaki vakitte bana eslik et :)</p>
+        <p><strong>Tarih:</strong> Subat 14th</p>
+        <p><strong>Zaman:</strong> 9:00 ESP</p>
 
-        <a href="https://zoom.us/j/your-zoom-link" class="btn" target="_blank">Join Our Date ❤️</a>
+        <a href="https://lehigh.zoom.us/j/93252105826?pwd=9gZl8eX6dmHd4mjOsa0LbwffDQyjsw.1" class="btn" target="_blank">Tikla banaa ❤️</a>
     </div>
 
     <footer>
-        Made with love, just for you. 💖
+        Saygili Sevgilime, saygi ve sevgiyle 💖
     </footer>
 </body>
 </html>
