--- a/index.html
+++ b/index.html
@@ -65,6 +65,16 @@
     </style>
 </head>
 <body>
+    <div style="margin-top: 20px;">
+        <button onclick="document.getElementById('audio-player').play()" style="padding: 10px 20px; font-size: 16px; background-color: #b30000; color: white; border: none; border-radius: 8px; cursor: pointer;">
+            Sarkimizz 🎵
+        </button>
+        <audio id="audio-player">
+            <source src="https://voca.ro/1os9LVRKEjSL" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
+    </div>
+    
     <div class="container">
         <div class="heart">❤️</div>
         <h1>Hafsa ve Selim gunune davetiye</h1>
